Removed whereBlock since it hasn't been used in three years
